syntax = "proto3";

package main;

option go_package = "./proto";

// 添加订单设置
message AddOrderSettingReq {
  int64 id = 1; //主键ID
  int32 flash_order_overtime = 2; //秒杀订单超时关闭时间(分)
  int32 normal_order_overtime = 3; //正常订单超时时间(分)
  int32 confirm_overtime = 4; //发货后自动确认收货时间（天）
  int32 finish_overtime = 5; //自动完成交易时间，不能申请售后（天）
  int32 status = 6; //状态：0->禁用；1->启用
  int32 is_default = 7; //是否默认：0->否；1->是
  int32 comment_overtime = 8; //订单完成后自动好评时间（天）
  int64 create_by = 9; //创建人ID
}

message AddOrderSettingResp {
  string pong = 1;
}

// 删除订单设置
message DeleteOrderSettingReq {
  repeated int64 ids = 1;
}

message DeleteOrderSettingResp {
  string pong = 1;
}

// 更新订单设置
message UpdateOrderSettingReq {
  int64 id = 1; //主键ID
  int32 flash_order_overtime = 2; //秒杀订单超时关闭时间(分)
  int32 normal_order_overtime = 3; //正常订单超时时间(分)
  int32 confirm_overtime = 4; //发货后自动确认收货时间（天）
  int32 finish_overtime = 5; //自动完成交易时间，不能申请售后（天）
  int32 status = 6; //状态：0->禁用；1->启用
  int32 is_default = 7; //是否默认：0->否；1->是
  int32 comment_overtime = 8; //订单完成后自动好评时间（天）
  int64 update_by = 11; //更新人ID
}

message UpdateOrderSettingResp {
  string pong = 1;
}

// 更新订单设置状态
message UpdateOrderSettingStatusReq {
  int64 id = 1; //主键ID
  int32 status = 2; //状态
  int64 update_by = 3; //更新人ID
}

message UpdateOrderSettingStatusResp {
  string pong = 1;
}

// 查询订单设置详情
message QueryOrderSettingDetailReq {
  int64 id = 1;
}

message QueryOrderSettingDetailResp {
  int64 id = 1; //主键ID
  int32 flash_order_overtime = 2; //秒杀订单超时关闭时间(分)
  int32 normal_order_overtime = 3; //正常订单超时时间(分)
  int32 confirm_overtime = 4; //发货后自动确认收货时间（天）
  int32 finish_overtime = 5; //自动完成交易时间，不能申请售后（天）
  int32 status = 6; //状态：0->禁用；1->启用
  int32 is_default = 7; //是否默认：0->否；1->是
  int32 comment_overtime = 8; //订单完成后自动好评时间（天）
  int64 create_by = 9; //创建人ID
  string create_time = 10; //创建时间
  int64 update_by = 11; //更新人ID
  string update_time = 12; //更新时间

}

// 分页查询订单设置列表
message QueryOrderSettingListReq {
  int32 status = 1; //状态：0->禁用；1->启用
  int32 is_default = 2; //是否默认：0->否；1->是
  int32 page_num = 3; //第几页
  int32 page_size = 4; //每页的数量
}

message OrderSettingListData {
  int64 id = 1; //主键ID
  int32 flash_order_overtime = 2; //秒杀订单超时关闭时间(分)
  int32 normal_order_overtime = 3; //正常订单超时时间(分)
  int32 confirm_overtime = 4; //发货后自动确认收货时间（天）
  int32 finish_overtime = 5; //自动完成交易时间，不能申请售后（天）
  int32 status = 6; //状态：0->禁用；1->启用
  int32 is_default = 7; //是否默认：0->否；1->是
  int32 comment_overtime = 8; //订单完成后自动好评时间（天）
  int64 create_by = 9; //创建人ID
  string create_time = 10; //创建时间
  int64 update_by = 11; //更新人ID
  string update_time = 12; //更新时间

}

message QueryOrderSettingListResp {
  int64 total = 1;
  repeated  OrderSettingListData list = 2;
}

message QueryDefaultSettingReq{

}
// 订单设置
service OrderSettingService {
  // 添加订单设置
  rpc AddOrderSetting(AddOrderSettingReq) returns (AddOrderSettingResp){}
  // 删除订单设置
  rpc DeleteOrderSetting(DeleteOrderSettingReq) returns (DeleteOrderSettingResp){}
  // 更新订单设置
  rpc UpdateOrderSetting(UpdateOrderSettingReq) returns (UpdateOrderSettingResp){}
  // 更新订单设置状态
  rpc UpdateOrderSettingStatus(UpdateOrderSettingStatusReq) returns (UpdateOrderSettingStatusResp){}
  // 查询订单设置详情
  rpc QueryOrderSettingDetail(QueryOrderSettingDetailReq) returns (QueryOrderSettingDetailResp){}
  // 查询订单设置列表
  rpc QueryOrderSettingList(QueryOrderSettingListReq) returns (QueryOrderSettingListResp){}

  // 更新订单设置默认状态
  rpc UpdateOrderSettingDefaultStatus(UpdateOrderSettingStatusReq) returns (UpdateOrderSettingStatusResp){}

  // 查询默认的订单设置
  rpc QueryDefaultSetting(QueryDefaultSettingReq) returns (QueryOrderSettingDetailResp){}
}
